# docpick

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml  server.json
docs/: design.md
src/docpick/: __init__.py  batch.py  cli.py  mcp_server.py
src/docpick/core/: config.py  document.py  pipeline.py  result.py
src/docpick/llm/: base.py  prompt.py  vllm_provider.py
src/docpick/ocr/: __init__.py  auto.py  base.py  easyocr_engine.py  got.py  paddle.py  vlm.py
src/docpick/schemas/: __init__.py  bank_statement.py  base.py  bill_of_lading.py  certificate.py  id_document.py  invoice.py  kr_tax_invoice.py  purchase_order.py  receipt.py
src/docpick/validation/: __init__.py  base.py  checksum.py  cross_document.py  rules.py
tests/unit/: test_batch.py  test_checksum.py  test_cli.py  test_config.py  test_cross_document.py  test_document.py  test_enterprise_schemas.py  test_error_handling.py  test_ocr_engines.py  test_prompt.py  test_result.py  test_schema_validation.py  test_schemas.py  test_validation_rules.py  test_validator.py
