[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docpick"
version = "0.1.3"
description = "Document in, Structured JSON out. Schema-driven document extraction with local OCR + LLM."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "QuartzUnit" },
]
keywords = [
    "ocr",
    "document-extraction",
    "idp",
    "invoice",
    "structured-data",
    "llm",
    "schema",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "Pillow>=10.0",
    "pypdfium2>=4.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
paddle = [
    "paddlepaddle>=3.0",
    "paddleocr>=2.9",
]
easyocr = [
    "easyocr>=1.7",
]
got = [
    "transformers>=4.40",
    "torch>=2.0",
]
mcp = [
    "fastmcp>=2.0",
]
all = [
    "docpick[paddle,easyocr,got,mcp]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
docpick = "docpick.cli:main"
docpick-mcp = "docpick.mcp_server:main"

[project.urls]
Homepage = "https://github.com/QuartzUnit/docpick"
Repository = "https://github.com/QuartzUnit/docpick"
Issues = "https://github.com/QuartzUnit/docpick/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/docpick"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "S"]
ignore = ["S101", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
